--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/React/node_modules
-/.pnp
+/Build Assets/React/node_modules
+/Build Assets/React/.pnp
 .pnp.js
 
 # testing
 /coverage
 
 # production
-/build
+/Build Assets/React/build
 
 # misc
 .DS_Store
