--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-loadable": "^5.5.0"
   },
   "devDependencies": {
+    "@docusaurus/eslint-plugin": "^2.4.1",
     "@docusaurus/module-type-aliases": "2.4.1",
     "@tsconfig/docusaurus": "^1.0.5",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
